# InstaScan

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/bff/: .gitlab-ci.yml  project.json  sonar-project.properties
apps/bff/src/: main.ts
apps/bff/src/app/: app.module.ts
apps/bff/src/app/images/: images.controller.spec.ts  images.controller.ts  images.module.ts  images.service.spec.ts  images.service.ts
apps/document-analyzation-service/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  pyproject.toml
apps/document-analyzation-service/config/: .env
apps/document-analyzation-service/document_analyzation_service/: __init__.py  delivery_note.py  ecmr_schema.py  image_processor.py  main.py  message_broker.py  pallet_note_schema.py  utils.py
apps/document-analyzation-service/document_analyzation_service/demo/: __init__.py  send_image.py
apps/document-analyzation-service/document_analyzation_service/document_classification/: classification.py
apps/document-analyzation-service/document_analyzation_service/document_classification/document_class_identifier/: delivery_note_identifier.py  document_type_identifier_dto.py  document_type_identifier_list.py  pallet_note_identifier.py  soc_cmr_identifier.py  syntetic_cmr_identifier.py
apps/document-analyzation-service/document_analyzation_service/tests/: __init__.py
apps/document-analyzation-service/document_analyzation_service/tests/unit_tests/: test_image_processor.py  test_main.py  test_message_broker.py  test_send_image.py  test_utils.py
apps/document-analyzation-service/requirements_locked/: requirements-lock-uv-py310-all.txt  requirements-lock-uv-py310-without-dev.txt
apps/document-analyzation-service/third-party-licenses/: third-party-licenses-complementary.csv  third-party-licenses.csv
apps/frontend/: .gitlab-ci.yml  jest.config.ts  project.json  sonar-project.properties
apps/frontend/src/: index.html  main.ts  styles.scss
apps/frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
apps/frontend/src/assets/: env.js  env.template.js
apps/frontend/src/environments/: environment.prod.ts  environment.ts
apps/storage-service/: .gitlab-ci.yml  jest.config.ts  project.json  sonar-project.properties  tsconfig.app.json  webpack.config.js
apps/storage-service/src/: main.ts
apps/storage-service/src/app/: app.module.ts
apps/storage-service/src/app/entities/: image.Information.ts  nft.ts
apps/storage-service/src/app/images/: amqp.broker.service.ts  image.information.database.service.ts  images.controller.spec.ts  images.controller.ts  images.module.ts  images.s3.service.ts  images.service.ts
apps/storage-service/src/app/nfts/: nft-database.service.spec.ts  nft-database.service.ts  nfts.module.ts  nfts.service.ts
docker/: angular.dockerfile  nest.dockerfile
documentation/: 01_introduction_and_goals.adoc  02_system_scope_and_context.adoc  03-building-block-view.adoc  04-runtime-view.adoc  05_installation_and_tutorial.adoc  index.adoc
init-db/: init.sql
init-s3/: upload.sh
libs/amqp/: project.json
libs/amqp/src/: index.ts
libs/amqp/src/lib/: amqp.broker.queues.ts  amqp.broker.ts
libs/amqp/src/lib/dto/: analysis-result-amqp.dto.ts  analyze-image-amqp.dto.ts  image-information-amqp.dto.ts  image.information.filter.amqp.dto.ts  upload-image-amqp.dto.ts
libs/amqp/src/lib/message-pattern/: image-message-pattern.ts
libs/api/src/: index.ts
libs/api/src/lib/dto/: image.dto.ts  image.information.dto.ts  read.image.dto.ts  upload.image.dto.ts
libs/api/src/lib/schema/: ecmr.schema.dto.ts  error.schema.dto.ts  schema.dto.ts
libs/blockchain-connector/: jest.config.ts
libs/blockchain-connector/src/: index.ts
libs/blockchain-connector/src/lib/: additional.data.dto.ts  blockchain-connector.module.ts  blockchain-connector.service.spec.ts  blockchain-connector.service.ts
nginx/: default.conf
third-party-licenses/: npm-licenses-complementary.csv  npm-licenses-overrides.txt  npm-licenses-summary.txt  npm-licenses.csv
(+88 files in other folders)
